# cgc-lib

./: .clang  .gitignore  .gitmodules  .vimrc  .ycm_extra_conf.py  Makefile  NOTE.md  README.md  meson.build  sync-wrapper.sh  sync.sh
contrib/lua51-ext/: luaext.c  luaext.h  meson.build
include/: colors.h  coroutine.h  gc.h
ref/: jemalloc.pc  libdw.pc  lua-5.1.pc
ref/ext/: test-gc.lua
src/: check_gc_root_new.lua  coroutine.c  gc_lua.c  meson.build
test/: backstrace.c  clang-test.c  gc_test.c  gc_test01.c  lua-test.c  meson.build  setjump-test.c  stack-test.c  t.c  weak-tbl-test.lua
wrapper/libcork/: Makefile.meson  meson.build  version.sh
wrapper/libcork/include/libcork/config/: version.h
wrapper/libev/: Makefile.meson  meson.build
wrapper/logger/: Makefile.meson  meson.build
